--- a/pw2-e2.html
+++ b/pw2-e2.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>HTML Ejercicio 2</html>
+    <title>HTML Ejercicio 2</title>
   </head>
   <body>
-    Himno Nacional Mexicano
+    <h1>Himno Nacional Mexicano</h1>
     Coro:
     Mexicanos, al grito de guerra
     el acero aprestad y el bridón.
